# friut_manager

./: app.py  fruit_manager.py  fruit_managers.py  git_projet.ipynb  pyproject.toml  readme.md
data/: app.py  inventaire.json
